<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.pondar.pacmankotlin.MainActivity" >

    <Button
        android:id="@+id/moveDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_down" />
    <Button
        android:id="@+id/moveUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_up" />
    <Button
        android:id="@+id/moveLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_left" />
    <Button
        android:id="@+id/moveRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_right" />

    <TextView
        android:id="@+id/pointsView"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points" />

    <!-- Notice how the custom view is referenced here with
    a full package path-->

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </org.pondar.pacmankotlin.GameView>

</LinearLayout>
